syntax = "proto3";

option go_package = "github.com/guycole/daring-chupacabra/proto";

package proto;

// 
service Chupacabra {
  rpc EnqueueSubmit(EnqueueRequest) returns (EnqueueResponse) {}
  rpc PollTest(PollRequest) returns (PollResponse) {}
}

//
message EnqueueRequest {
  string client_id = 1; // requestor
  string message = 2;   // command
}

//
message EnqueueResponse {
  string client_id = 1;  // requestor
  string receipt_id = 2; // response receipt
}

//
message PollRequest {
  string client_id = 1; // requestor
}

//
message PollResponse {
  string client_id = 1; // requestor

  message ResponseTraffic {
    string receipt_id = 1;
    string response = 2;
  }

  repeated ResponseTraffic responses = 2;
}